hphp/test/zend/good/ext/exif/tests/exif014.php
<?php
var_dump(exif_read_data(dirname(__FILE__).'/image014.jpg'));
?>