hphp/test/zend/bad/ext/soap/tests/bugs/bug50698_1.php
<?php
new SoapClient(dirname(__FILE__) . '/bug50698_1.wsdl');
echo "ok\n";
?>